# redis_backup

./: .gitignore  Makefile  README.md  oci_config.prod  pyproject.toml  requirements.txt
config/: .secrets.toml  settings.toml
redis_backup/: cli.py  main.py
redis_backup/api/v1/endpoints/: restore.py
redis_backup/core/: config.py  logging.py  scheduler.py
redis_backup/repositories/: redis_repository.py
redis_backup/services/: backup_service.py  google_service.py  nfs_service.py  oracle_service.py  restore_service.py  s3_service.py
scripts/: vars.ipynb
tests/: test_backup_service.py
